--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\julien\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
-j2ee.server.home=D:/Documents/PolytechIG5/practicas/practicaweb/apache-tomcat-7.0.82
-j2ee.server.instance=tomcat70:home=D:\\Documents\\PolytechIG5\\practicas\\practicaweb\\apache-tomcat-7.0.82
-user.properties.file=C:\\Users\\julien\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\Ardihkon\\AppData\\Roaming\\NetBeans\\8.2\\tomcat70.properties
+j2ee.server.home=D:/SEII/installer/apache-tomcat-7.0.82
+j2ee.server.instance=tomcat70:home=D:\\SEII\\installer\\apache-tomcat-7.0.82
+user.properties.file=C:\\Users\\Ardihkon\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
